# newrelic-telemetry-sdk-rust

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: attribute.rs  client.rs  lib.rs  metric.rs  sender.rs  span.rs
tests/: blocking.rs  metrics.rs  spans.rs
tests/common/: mod.rs
