[package]
name = "newrelic-telemetry"
version = "0.1.0"
authors = ["New Relic <opensource@newrelic.com>"]
edition = "2018"

[features]
default = [ "client" ]
client = [ "flate2" ]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }

flate2 = { version = "1.0.16", optional = true }

[dev-dependencies]
serde_json = "1.0"
