[package]
name = "newrelic-telemetry"
version = "0.1.0"
authors = ["New Relic <opensource@newrelic.com>"]
edition = "2018"

[features]
default = [ "client" ]
client = [ "flate2", "hyper", "hyper-tls" ]

[dependencies]
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

hyper = { version = "0.13", features = [], optional = true }
hyper-tls = { version = "0.4.0", optional = true }
flate2 = { version = "1.0.16", optional = true }
