[package]
name = "newrelic-telemetry"
version = "0.1.0"
authors = ["New Relic <opensource@newrelic.com>"]
edition = "2018"

[features]
default = [ "client" ]
client = [ "flate2", "hyper", "hyper-tls" ]
blocking = [ "client", "futures", "tokio" ]

[dependencies]
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0.57", features = ["derive"] }
serde_json = "1.0.57"

hyper = { version = "0.13", features = [], optional = true }
hyper-tls = { version = "0.4.0", optional = true }
flate2 = { version = "1.0.16", optional = true }
futures = { version = "0.3.1", optional = true }
tokio = { version = "0.2.6", features = ["rt-threaded", "macros"], optional = true }
uuid = { version = "0.8.1", features = ["v4"] }

[dev-dependencies]
rand = "0.7.3"
env_logger = "0.8.2"
futures = { version = "0.3.1" }
tokio = { version = "0.2.6", features = ["rt-threaded", "macros"] }
